# segments-ai

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  MANIFEST.in  Makefile  README.md  config.json  config.py  dev-requirements.txt  dev_requirements.txt  example-text.csv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  sdk_test.ipynb  setup.cfg  setup.py  test.curl.py  test.py  tox.ini
.claude/: settings.local.json
.github/workflows/: black.yaml  isort.yaml  main.yaml  sphinx.yml  tests.yaml
docs/: Makefile
docs/source/: client.md  conf.py  convenience_api.md  dataset.md  exceptions.md  huggingface.md  index.md  index.rst  install.md  modules.rst  quickstart.md  reference.md  resource_api.md  segments.md  segments.rst  segmentsdataset.md  setup.md  types.md  usage.md  usage.rst  utils.md
docs/source/_build/doctrees/: environment.pickle  index.doctree
docs/source/_build/doctrees/autoapi/: index.doctree
docs/source/_build/doctrees/autoapi/src/: index.doctree
docs/source/_build/doctrees/autoapi/src/client/: index.doctree
docs/source/_build/doctrees/autoapi/src/dataset/: index.doctree
docs/source/_build/doctrees/autoapi/src/export/: index.doctree
docs/source/_build/doctrees/autoapi/src/huggingface/: index.doctree
docs/source/_build/doctrees/autoapi/src/typehints/: index.doctree
docs/source/_build/doctrees/autoapi/src/utils/: index.doctree
docs/source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/_sources/autoapi/: index.rst.txt
docs/source/_build/html/_sources/autoapi/src/: index.rst.txt
docs/source/_build/html/_sources/autoapi/src/client/: index.rst.txt
docs/source/_build/html/_sources/autoapi/src/dataset/: index.rst.txt
docs/source/_build/html/_sources/autoapi/src/export/: index.rst.txt
docs/source/_build/html/_sources/autoapi/src/huggingface/: index.rst.txt
docs/source/_build/html/_sources/autoapi/src/typehints/: index.rst.txt
docs/source/_build/html/_sources/autoapi/src/utils/: index.rst.txt
docs/source/_build/html/autoapi/: index.html
docs/source/_build/html/autoapi/src/: index.html
docs/source/_build/html/autoapi/src/client/: index.html
docs/source/_build/html/autoapi/src/dataset/: index.html
docs/source/_build/html/autoapi/src/export/: index.html
docs/source/_build/html/autoapi/src/huggingface/: index.html
docs/source/_build/html/autoapi/src/typehints/: index.html
docs/source/_build/html/autoapi/src/utils/: index.html
docs/source/_static/css/: custom.css
segments/: __init__.py  client.py  dataset.py  export.py  export_coco.py  huggingface.py  utils.py
segments/data/: dataset_card_template.md
segments2/: __init__.py  client.py  clienttest.py  dataset.py  export.py  huggingface.py  typehints.py  utils.py
segments2/docs/notebooks/: tutorial.ipynb
segments2/docs/source/: conf.py  index.md  python-sdk.md  usage.md
segments2/tests/: add_dataset.json  add_delete_dataset_collaborator.json  add_delete_labelset.json  add_delete_release.json  get_dataset.json  get_datasets.json  get_label_0.json  get_label_1.json  get_label_2.json  get_label_3.json  get_label_4.json  get_label_5.json  get_label_6.json  get_label_7.json  get_label_8.json  get_labelset_0.json  get_labelset_1.json  get_labelset_2.json  get_labelset_3.json  get_labelsets.json  get_release.json  get_release_0.json  get_release_1.json  get_release_2.json  get_releases.json  get_sample_0.json  get_sample_1.json  get_sample_2.json  get_sample_3.json  get_sample_4.json  get_sample_5.json  get_sample_6.json  get_sample_7.json  get_sample_8.json  get_samples.json  update_dataset.json  upload_asset.json
segmentsai/: __init__.py  main.py  segments.py
src/segments/: __init__.py  client.py  convenience_api.py  covenience_api.py  dataset.py  exceptions.py  export.py  huggingface.py  resource_api.py  sentinel.py  typehints.py  typing.py  utils.py  version.py
tests/: conftest.py  test_client.py  test_convenience.py  test_dataset.py  test_random.py  test_resource_api.py  test_utils.py
tests/fixtures/: payloads.py
