[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

# pytest
[tool.pytest.ini_options]
addopts = "--cov=segments"
testpaths = ["tests"]
pythonpath = ["."]

# mypy
[tool.mypy]
mypy_path = "src"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

# ruff
[tool.ruff]
line-length = 119 # huggingface default

[tool.ruff.isort]
known-third-party = ["segments"]
lines-after-imports = 2 # huggingface default
