[metadata]
description_file = README.md

[options.package_data]
segments = py.typed

[mypy]
plugins = 
    pydantic.mypy 
    numpy.typing.mypy_plugin
warn_return_any = True
warn_unused_configs = True

[flake8]
max_line_length = 88
ignore = E203, E501, E741, W503, W605
extend_ignore = E203
exclude =
    .venv
    .git
    __pycache__
    docs/build
    dist
    .mypy_cache
per_file_ignores =
    # __init__.py files are allowed to have unused imports and lines-too-long
    */__init__.py:F401
    */**/**/__init__.py:F401,E501

[black]
include = \.pyi?$
exclude =
     __pycache__
    \.git
    \.mypy_cache
    \.pytest_cache
    \.vscode
    \.venv
    \bdist\b
    \bdoc\b
    
[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
default_section = FIRSTPARTY
known_first_party = segments
